<?xml version="1.0" encoding="UTF-8"?>
<resources>
    <string name="app_name">Miao</string>
    <string name="account_admin_good_like_tips">您是管理员，不能进行点赞或收藏操作哟</string>
    <string name="account_login_find_user_empty">用户不存在</string>
    <string name="account_login_find_user_no_empty">用户已存在</string>
    <string name="account_login_error_name_psw">用户名或密码错误</string>
    <string name="account_login_title">登录</string>
    <string name="account_login_input_account">请输入账号</string>
    <string name="account_login_input_username">请输入用户名</string>
    <string name="account_login_input_password">请输入密码</string>
    <string name="account_login_name_already_exist">用户名已存在</string>
    <string name="account_login_name_no_exist">用户名不存在</string>
    <string name="account_login_success">登录成功</string>
    <string name="account_login_text">登录</string>
    <string name="account_login_type_admin_title">管理员</string>
    <string name="account_login_type_user_title">用户</string>
    <string name="account_login_type_tips">登录角色切换为：</string>
    <string name="account_login_unknown_error">未知登录错误</string>
    <string name="account_register_text">注册</string>
    <string name="account_register_illegal_username">用户名不合法 (4–32位, 由中文/字母/数字组成, 但不能是纯数字)</string>
    <string name="account_register_connect_failed">与服务器连接失败，请稍后重试</string>
    <string name="account_register_submit_failed">注册提交失败，请稍后重试</string>
    <string name="account_register_success">注册成功, 是否现在去设置密保，以备找回密码</string>
    <string name="account_register_set_confidentiality">去设置</string>
    <string name="account_reset_pwd_title">找回密码</string>
    <string name="account_reset_pwd_mate_user_failed">用户名或密保错误</string>
    <string name="account_reset_pwd_mate_user_success">匹配成功</string>
    <string name="account_reset_pwd_mate_user_error">用户匹配异常，请稍后重试</string>
    <string name="account_reset_pwd_success">修改密码成功</string>
    <string name="account_edit_confident_title">设置密保</string>
    <string name="account_edit_pwd_title">更改密码</string>
    <string name="account_reset_pwd_old_hint">请输入原密码</string>
    <string name="account_reset_pwd_old_error_tip">原密码不正确</string>
    <string name="account_reset_pwd_new_hint">请输入新密码</string>
    <string name="account_reset_pwd_confirm_hint">请再次输入新密码</string>
    <string name="account_username_is_empty">用户名为空</string>
    <string name="account_password_is_empty">密码为空</string>
    <string name="account_set_confidentiality_answer_title1">密保答案1:</string>
    <string name="account_set_confidentiality_answer_title2">密保答案2:</string>
    <string name="account_set_confidentiality_answer_tip">请输入密保答案</string>
    <string name="account_set_confidentiality_question_title">密保问题:</string>
    <string name="account_set_confidentiality_question_title1">密保问题1:</string>
    <string name="account_set_confidentiality_question_title2">密保问题2:</string>
    <string name="account_set_confidentiality_question_tip1">您父亲的名字</string>
    <string name="account_set_confidentiality_question_tip2">您母亲的名字</string>
    <string name="account_set_confidentiality_question_tip3">您高中班主任的名字</string>
    <string name="account_set_confidentiality_question_tip4">自定义</string>
    <string name="account_set_confidentiality_submit_error1">必须首先设置第一个问题</string>
    <string name="account_set_confidentiality_submit_error2">两个问题不能相同</string>
    <string name="account_set_confidentiality_submit_error3">答案不可为空</string>
    <string name="account_set_confidentiality_submit_success">设置成功</string>
    <string name="account_set_confidentiality_connect_failed">与服务器连接失败，请稍后重试</string>
    <string name="account_reset_forget_password">忘记密码</string>
    <string name="common_dialog_title">提示</string>
    <string name="common_connect_failed">与服务器连接失败，请稍后重试</string>
    <string name="common_edit_pwd_error1">密码不符合要求，密码8–64位必须包含数字和字母</string>
    <string name="common_edit_pwd_error2">密码不符合要求，不能包含4位及以上的连续数字或字母，比如：1234或abcd</string>
    <string name="common_edit_pwd_error3">密码不符合要求，不能包含3位及以上的重叠数字或字母，比如：111或aaa</string>
    <string name="common_edit_pwd_error4">密码不符合要求，不能包含%s内容</string>
    <string name="common_edit_pwd_error5">密码不能为空</string>
    <string name="common_edit_pwd_error6">两次密码不一致</string>
    <string name="common_input_second_password">请再次输入密码</string>
    <string name="common_input_password_tips">密码长度8–64位,由数字,字母和符号组成</string>
    <string name="common_next_tip">下一步</string>
    <string name="common_password_power">密码强度</string>
    <string name="common_cancel">取消</string>
    <string name="common_confirm">确定</string>
    <string name="common_save">保存</string>
    <string name="common_save_success">保存成功</string>
    <string name="common_save_failed">保存失败，请稍后重试</string>
    <string name="common_save_no">不保存</string>
    <string name="common_submit">提交</string>
    <string name="common_success">成功</string>
    <string name="common_talk_later">以后再说</string>
    <string name="common_unknown_error">未知错误</string>
    <string name="common_pull_refresh_frequently">刷新太频繁了，请稍后再试</string>
    <string name="home_bottom_home_title">首页</string>
    <string name="home_bottom_trend_title">动态</string>
    <string name="home_bottom_collect_title">收藏</string>
    <string name="home_bottom_refuse_title">未通过</string>
    <string name="home_bottom_wait_title">待审</string>
    <string name="home_bottom_mine_title">我的</string>
    <string name="me_account_logout">登出</string>
    <string name="me_account_logout_title">退出当前账号</string>
    <string name="me_account_setting_username">用户名</string>
    <string name="me_account_setting_profile_photo">头像</string>
    <string name="me_account_setting_profile_photo_tips">是否去相册更换当前头像</string>
    <string name="me_account_setting_profile_photo_success">修改成功</string>
    <string name="me_account_setting_profile_photo_failed">修改头像失败，请稍后重试</string>
    <string name="me_account_edit_pwd">修改密码</string>
    <string name="music_good_add_failed">点赞失败，请稍后重试</string>
    <string name="music_good_add_success">点赞成功</string>
    <string name="music_good_cancel_failed">取消点赞失败，请稍后重试</string>
    <string name="music_good_cancel_success">取消点赞成功</string>
    <string name="music_like_add_failed">收藏失败，请稍后重试</string>
    <string name="music_like_add_success">收藏成功</string>
    <string name="music_like_cancel_failed">取消收藏失败，请稍后重试</string>
    <string name="music_like_cancel_success">取消收藏成功</string>
    <string name="music_state_pass_failed">审核失败，请稍后重试</string>
    <string name="music_state_pass_success">审核成功</string>
    <string name="music_state_pass_tip">该音乐是否通过审核？</string>
    <string name="music_state_pass_already_tip">该音乐已通过审核</string>
    <string name="music_state_refuse_tip">该音乐是否未通过审核？</string>
    <string name="music_state_refuse_already_tip">该音乐已未通过审核</string>
    <string name="music_state_wait_title">审核中</string>
    <string name="music_state_refuse_title">审核未通过</string>
    <string name="music_add_dialog_content">去选择音乐？</string>
    <string name="music_add_set_music_failed">选取音乐失败</string>
    <string name="music_add_set_music_success">选取音乐成功</string>
    <string name="music_add_set_name">请设置音乐名称</string>
    <string name="music_add_set_head">去更换音乐封面</string>
    <string name="music_add_set_head_failed">选取封面失败</string>
    <string name="music_add_set_head_success">选取封面成功</string>
    <string name="music_add_sumit_success">音乐提交成功</string>
    <string name="play_load_url_failed">播放资源加载失败，请稍后再试</string>
    <string name="play_change_music_no_more_tips">没有更多歌曲了哟</string>
    <string name="play_download_success">下载成功</string>
    <string name="play_download_failed">下载失败</string>
    <string name="play_download_ing">下载中...</string>
    <string name="play_download_exist_tip">下载列表已经存在</string>
</resources>