<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/item_change_password"/>

    <LinearLayout
        android:id="@+id/ll_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_48"
        android:orientation="horizontal"
        android:paddingStart="@dimen/half_of_normal_padding"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_10"
            android:text="@string/me_account_setting_username"
            android:textColor="@color/normal_text_color"
            android:textSize="@dimen/subtitle_size" />

        <TextView
            android:id="@+id/tv_username"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/normal_margin"
            android:layout_marginEnd="@dimen/normal_margin"
            android:layout_weight="1"
            android:gravity="end"
            android:singleLine="true"
            android:text=""
            android:textColor="@color/normal_text_color" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/rl_profile_photo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_30"
        android:paddingStart="@dimen/half_of_normal_padding"
        android:background="@color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll_username">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/dp_10"
            android:text="@string/me_account_setting_profile_photo"
            android:textColor="@color/normal_text_color"
            android:textSize="@dimen/subtitle_size" />

        <ImageView
            android:id="@+id/iv_profile_photo"
            android:layout_width="@dimen/static_image_head_view_size"
            android:layout_height="@dimen/static_image_head_view_size"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="@dimen/normal_margin"
            android:src="@mipmap/ic_login_logo" />
    </RelativeLayout>

    <com.meowing.loud.arms.widget.controls.CommonItemWidget
        android:id="@+id/item_change_password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_56"
        android:layout_marginTop="@dimen/half_of_normal_margin"
        android:background="@color/white"
        android:paddingStart="@dimen/half_of_normal_padding"
        app:headerIconVisible="false"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rl_profile_photo"
        app:switchVisible="false"
        app:title="@string/me_account_edit_pwd" />

    <com.meowing.loud.arms.widget.controls.CommonItemWidget
        android:id="@+id/item_change_confident"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_56"
        android:background="@color/white"
        android:paddingStart="@dimen/half_of_normal_padding"
        app:headerIconVisible="false"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/item_change_password"
        app:switchVisible="false"
        app:title="@string/account_edit_confident_title" />

    <TextView
        android:id="@+id/tv_login_out"
        style="@style/CommonButton"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_52"
        android:layout_marginStart="@dimen/normal_margin"
        android:layout_marginEnd="@dimen/normal_margin"
        android:layout_marginBottom="@dimen/dp_50"
        android:gravity="center"
        android:text="@string/me_account_logout"
        android:textColor="@color/fresh_red"
        android:textSize="@dimen/subtitle_size"
        app:layout_constraintBottom_toBottomOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>