<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_bind_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/normal_left_right_margin"
        android:layout_marginTop="@dimen/dp_50"
        android:text="@string/account_register_text"
        android:textColor="@color/normal_text_color"
        android:textSize="@dimen/big_title_size"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/v_bottom_bind_title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/normal_margin"
        app:layout_constraintTop_toBottomOf="@+id/tv_bind_title" />

    <LinearLayout
        android:id="@+id/ll_nickname_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/normal_margin"
        android:layout_marginTop="@dimen/normal_margin"
        android:layout_marginEnd="@dimen/normal_margin"
        android:background="@drawable/bg_r_8_soild_white"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/v_bottom_bind_title">

        <EditText
            android:id="@+id/et_username"
            style="@style/CommonContent"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_48"
            android:background="@drawable/bg_r_8_soild_white"
            android:ellipsize="end"
            android:hint="@string/account_login_input_account"
            android:imeOptions="actionDone"
            android:paddingLeft="@dimen/dp_18"
            android:paddingRight="@dimen/dp_18"
            android:singleLine="true"
            android:textColor="@color/normal_text_color"
            android:textColorHint="@color/hint_color"
            android:textCursorDrawable="@drawable/theme_color_cursor"
            android:textSize="@dimen/small_tips_size" />

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/csl_question1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/normal_margin"
        app:layout_constraintTop_toBottomOf="@id/ll_nickname_input">

        <TextView
            android:id="@+id/tv_question1_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/normal_margin"
            android:text="@string/account_set_confidentiality_question_title1"
            android:textColor="@color/content_color"
            app:layout_constraintBottom_toBottomOf="@id/tv_question1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_question1" />

        <TextView
            android:id="@+id/tv_question1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/normal_margin"
            android:ellipsize="end"
            android:paddingTop="@dimen/small_padding"
            android:paddingBottom="@dimen/small_padding"
            android:singleLine="true"
            android:text="@string/account_set_confidentiality_question_tip1"
            android:textColor="@color/tips_color"
            android:textSize="@dimen/tips_size"
            app:layout_constraintStart_toEndOf="@id/tv_question1_title"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv_condition_limit_status1"
            android:layout_width="@dimen/small_icon_size"
            android:layout_height="@dimen/small_icon_size"
            android:paddingStart="@dimen/half_of_normal_padding"
            android:paddingEnd="@dimen/small_padding"
            android:src="@mipmap/ic_gray_down"
            app:layout_constraintBottom_toBottomOf="@id/tv_question1"
            app:layout_constraintLeft_toRightOf="@id/tv_question1"
            app:layout_constraintTop_toTopOf="@id/tv_question1" />

        <EditText
            android:id="@+id/et_answer1"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_48"
            android:layout_margin="@dimen/normal_margin"
            android:background="@drawable/bg_r_8_soild_white"
            android:hint="@string/account_set_confidentiality_answer_tip"
            android:imeOptions="actionDone"
            android:paddingStart="@dimen/dp_30"
            android:paddingEnd="@dimen/half_of_normal_padding"
            android:singleLine="true"
            android:textColor="@color/normal_text_color"
            android:textColorHint="@color/hint_color"
            android:textCursorDrawable="@drawable/theme_color_cursor"
            android:textSize="@dimen/tips_size"
            app:layout_constraintTop_toBottomOf="@id/tv_question1" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/csl_question2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/csl_question1">

        <TextView
            android:id="@+id/tv_question2_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/normal_margin"
            android:drawablePadding="@dimen/small_padding"
            android:text="@string/account_set_confidentiality_question_title2"
            android:textColor="@color/content_color"
            app:layout_constraintBottom_toBottomOf="@id/tv_question2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_question2" />

        <TextView
            android:id="@+id/tv_question2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/normal_margin"
            android:layout_marginTop="@dimen/normal_margin"
            android:ellipsize="end"
            android:paddingTop="@dimen/small_padding"
            android:paddingBottom="@dimen/small_padding"
            android:singleLine="true"
            android:text="@string/account_set_confidentiality_question_tip1"
            android:textColor="@color/tips_color"
            android:textSize="@dimen/tips_size"
            app:layout_constraintStart_toEndOf="@id/tv_question2_title"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv_condition_limit_status2"
            android:layout_width="@dimen/small_icon_size"
            android:layout_height="@dimen/small_icon_size"
            android:paddingStart="@dimen/half_of_normal_padding"
            android:paddingEnd="@dimen/small_padding"
            android:src="@mipmap/ic_gray_down"
            app:layout_constraintBottom_toBottomOf="@id/tv_question2"
            app:layout_constraintLeft_toRightOf="@id/tv_question2"
            app:layout_constraintTop_toTopOf="@id/tv_question2" />

        <EditText
            android:id="@+id/et_answer2"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_48"
            android:layout_margin="@dimen/normal_margin"
            android:background="@drawable/bg_r_8_soild_white"
            android:hint="@string/account_set_confidentiality_answer_tip"
            android:imeOptions="actionDone"
            android:paddingStart="@dimen/dp_30"
            android:paddingEnd="@dimen/half_of_normal_padding"
            android:singleLine="true"
            android:textColor="@color/normal_text_color"
            android:textColorHint="@color/hint_color"
            android:textCursorDrawable="@drawable/theme_color_cursor"
            android:textSize="@dimen/tips_size"
            app:layout_constraintTop_toBottomOf="@id/tv_question2" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <TextView
        android:id="@+id/tv_set_confidentiality_submit"
        style="@style/CommonButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/big_normal_margin"
        android:layout_marginEnd="@dimen/big_normal_margin"
        android:layout_marginBottom="@dimen/dp_50"
        android:text="@string/common_save"
        app:layout_constraintBottom_toBottomOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>