<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_bind_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/normal_left_right_margin"
        android:layout_marginTop="@dimen/dp_50"
        android:text="@string/account_register_text"
        android:textColor="@color/normal_text_color"
        android:textSize="@dimen/big_title_size"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/v_bottom_bind_title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/normal_margin"
        app:layout_constraintTop_toBottomOf="@+id/tv_bind_title"/>


    <LinearLayout
        android:id="@+id/ll_nickname_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/normal_margin"
        android:layout_marginTop="@dimen/normal_margin"
        android:layout_marginRight="@dimen/normal_margin"
        android:background="@drawable/bg_r_8_soild_white"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/v_bottom_bind_title">


        <EditText
            android:id="@+id/et_username"
            style="@style/CommonContent"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_48"
            android:background="@drawable/bg_r_8_soild_white"
            android:ellipsize="end"
            android:hint="@string/account_login_input_account"
            android:singleLine="true"
            android:imeOptions="actionDone"
            android:paddingLeft="@dimen/dp_18"
            android:paddingRight="@dimen/dp_18"
            android:textColor="@color/normal_text_color"
            android:textColorHint="@color/hint_color"
            android:textCursorDrawable="@drawable/theme_color_cursor"
            android:textSize="@dimen/small_tips_size" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_password_input_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_18"
        android:layout_marginTop="@dimen/normal_margin"
        android:layout_marginRight="@dimen/dp_18"
        android:background="@drawable/bg_r_8_soild_white"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/ll_nickname_input">


        <EditText
            android:id="@+id/et_password_1"
            style="@style/CommonContent"
            android:layout_width="0dp"
            android:layout_height="@dimen/dp_48"
            android:layout_weight="1"
            android:background="@drawable/bg_r_8_soild_white"
            android:hint="@string/account_login_input_password"
            android:inputType="textPassword"
            android:paddingLeft="@dimen/dp_18"
            android:paddingRight="@dimen/dp_18"
            android:textColor="@color/normal_text_color"
            android:textColorHint="@color/hint_color"
            android:textCursorDrawable="@drawable/theme_color_cursor"
            android:textSize="@dimen/small_tips_size" />

        <ImageView
            android:id="@+id/cb_eye_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="@dimen/three_fourths_normal_margin"
            android:src="@drawable/cb_password_eye_selector" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_password_input_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_18"
        android:layout_marginTop="@dimen/normal_margin"
        android:layout_marginRight="@dimen/dp_18"
        android:background="@drawable/bg_r_8_soild_white"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/ll_password_input_1">


        <EditText
            android:id="@+id/et_password_2"
            style="@style/CommonContent"
            android:layout_width="0dp"
            android:layout_height="@dimen/dp_48"
            android:layout_weight="1"
            android:background="@drawable/bg_r_8_soild_white"
            android:hint="@string/common_input_second_password"
            android:inputType="textPassword"
            android:paddingLeft="@dimen/dp_18"
            android:paddingRight="@dimen/dp_18"
            android:textColor="@color/normal_text_color"
            android:textColorHint="@color/hint_color"
            android:textCursorDrawable="@drawable/theme_color_cursor"
            android:textSize="@dimen/small_tips_size" />

        <ImageView
            android:id="@+id/cb_eye_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="@dimen/three_fourths_normal_margin"
            android:src="@drawable/cb_password_eye_selector" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_pwd_error_tips"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/normal_left_right_margin"
        android:layout_marginTop="@dimen/half_of_normal_margin"
        android:layout_marginEnd="@dimen/normal_left_right_margin"
        android:text="@string/common_input_password_tips"
        android:textColor="@color/red_f94046"
        app:layout_constraintLeft_toLeftOf="@id/ll_password_input_2"
        app:layout_constraintRight_toRightOf="@id/ll_password_input_2"
        app:layout_constraintTop_toBottomOf="@id/ll_password_input_2"

        />

    <TextView
        android:id="@+id/tv_password_power"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/half_of_normal_margin"
        android:layout_marginTop="@dimen/normal_margin"
        android:text="@string/common_password_power"
        android:textColor="@color/normal_text_color"
        android:textSize="@dimen/tips_size"
        app:layout_constraintRight_toLeftOf="@+id/password_power_poor"
        app:layout_constraintTop_toBottomOf="@id/tv_pwd_error_tips" />

    <View
        android:id="@+id/password_power_poor"
        android:layout_width="@dimen/dp_20"
        android:layout_height="@dimen/dp_6"
        android:layout_marginRight="@dimen/dp_5"
        android:background="@color/password_power_color"
        app:layout_constraintBottom_toBottomOf="@id/tv_password_power"
        app:layout_constraintRight_toLeftOf="@id/password_power_middle"
        app:layout_constraintTop_toTopOf="@id/tv_password_power" />


    <View
        android:id="@+id/password_power_middle"
        android:layout_width="@dimen/dp_20"
        android:layout_height="@dimen/dp_6"
        android:layout_marginRight="@dimen/dp_5"
        android:background="@color/password_power_color"
        app:layout_constraintBottom_toBottomOf="@id/tv_password_power"
        app:layout_constraintRight_toLeftOf="@id/password_power_strong"
        app:layout_constraintTop_toTopOf="@id/tv_password_power" />


    <View
        android:id="@+id/password_power_strong"
        android:layout_width="@dimen/dp_20"
        android:layout_height="@dimen/dp_6"
        android:layout_marginRight="@dimen/dp_15"
        android:background="@color/password_power_color"
        app:layout_constraintBottom_toBottomOf="@id/tv_password_power"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_password_power" />

    <TextView
        android:id="@+id/tv_input_pwd_submit"
        style="@style/CommonButton"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_48"
        android:layout_marginStart="@dimen/big_normal_margin"
        android:layout_marginEnd="@dimen/big_normal_margin"
        android:layout_marginBottom="@dimen/dp_50"
        android:gravity="center"
        android:text="@string/account_register_text"
        app:layout_constraintBottom_toBottomOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>